--- a/HandsOn/Group12/src/main/resources/templates/index.html
+++ b/HandsOn/Group12/src/main/resources/templates/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -19,10 +19,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </div>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><!--<br>-->
     <div class="w3-container w3-row">
         <div class="w3-col s4">
-            <img src="../images/logo_alcobendas.jpg" class="w3-margin-right" style="width:220px">
+            <img src="../images/logo_alcobendas.jpg" class="w3-margin-right" style="width:220px"/>
         </div>
         <div class="w3-col s10 w3-bar">
             <!--<span><strong>Bienvenido</strong></span><br> -->
@@ -31,7 +31,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
         </div>
     </div>
-    <hr>
+    <!--<hr>-->
     <div class="w3-container">
         <h5>Dashboard</h5>
     </div>
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bell fa-fw"></i>&nbsp; News</a>
         <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bank fa-fw"></i>&nbsp; General</a>
         <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>&nbsp; History</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a><br><br>
+        <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a>
     </div>
 </nav>
 
@@ -154,7 +154,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
     </div>
 
-    <hr>
+    <!--<hr>-->
     <div class="w3-container">
         <h5>General Stats</h5>
         <p>New Visitors</p>
@@ -172,7 +172,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <div class="w3-container w3-center w3-padding w3-red" style="width:75%">75%</div>
         </div>
     </div>
-    <hr>
+    <!--<hr>-->
 
     <div class="w3-container">
         <h5>Countries</h5>
@@ -201,52 +201,52 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
                 <td>France</td>
                 <td>1.5%</td>
             </tr>
-        </table><br>
+        </table><!--<br>-->
         <button class="w3-button w3-dark-grey">More Countries &nbsp;<i class="fa fa-arrow-right"></i></button>
     </div>
-    <hr>
+    <!--<hr>-->
     <div class="w3-container">
         <h5>Recent Users</h5>
         <ul class="w3-ul w3-card-4 w3-white">
             <li class="w3-padding-16">
-                <img src="../images/avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-                <span class="w3-xlarge">Mike</span><br>
+                <img src="../images/avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:35px"/>
+                <span class="w3-xlarge">Mike</span><!--<br>-->
             </li>
             <li class="w3-padding-16">
-                <img src="../images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-                <span class="w3-xlarge">Jill</span><br>
+                <img src="../images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px"/>
+                <span class="w3-xlarge">Jill</span><!--<br>-->
             </li>
             <li class="w3-padding-16">
-                <img src="../images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-                <span class="w3-xlarge">Jane</span><br>
+                <img src="../images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px"/>
+                <span class="w3-xlarge">Jane</span><!--<br>-->
             </li>
         </ul>
     </div>
-    <hr>
+    <!--<hr>-->
 
     <div class="w3-container">
         <h5>Recent Comments</h5>
         <div class="w3-row">
             <div class="w3-col m2 text-center">
-                <img class="w3-circle" src="../images/avatar3.png" style="width:96px;height:96px">
+                <img class="w3-circle" src="../images/avatar3.png" style="width:96px;height:96px"/>
             </div>
             <div class="w3-col m10 w3-container">
                 <h4>John <span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
-                <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+                <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><!--<br>-->
             </div>
         </div>
 
         <div class="w3-row">
             <div class="w3-col m2 text-center">
-                <img class="w3-circle" src="../images/avatar1.png" style="width:96px;height:96px">
+                <img class="w3-circle" src="../images/avatar1.png" style="width:96px;height:96px"/>
             </div>
             <div class="w3-col m10 w3-container">
                 <h4>Bo <span class="w3-opacity w3-medium">Sep 28, 2014, 10:15 PM</span></h4>
-                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><!--<br>-->
             </div>
         </div>
     </div>
-    <br>
+    <!--<br>-->
     <div class="w3-container w3-dark-grey w3-padding-32">
         <div class="w3-row">
             <div class="w3-container w3-third">
