--- a/HandsOn/Group19/app/main.css
+++ b/HandsOn/Group19/app/main.css
@@ -37,7 +37,7 @@ v.homeLink {
 }
 
 .iconBar {
-  font-size: 10px;
+  font-size: 14px;
 }
 
 .links a:not(.homeLink) {
@@ -85,9 +85,9 @@ a:hover {
 }
 
 .bounce {
-	-moz-animation: bounce 3s infinite;
-	-webkit-animation: bounce 3s infinite;
-	animation: bounce 3s infinite;
+  -moz-animation: bounce 3s infinite;
+  -webkit-animation: bounce 3s infinite;
+  animation: bounce 3s infinite;
 }
 @-moz-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -145,7 +145,7 @@ a:hover {
 }
 
 .item:hover {
-  
+
   color:blue;
 }
 
@@ -155,12 +155,11 @@ a:hover {
 }
 
 .offer {
-  height: 20vmin;
   margin: 10vmin 0vmin;
 }
 
 .halfPadding {
-  height:100%;
+  height:20vmin;
 }
 
 body {
@@ -186,7 +185,7 @@ body {
 }
 
 .wallpaperinfo {
-    height: 100%;
+  height: 100%;
   background-image: url("img/wallpaper_madrid_2.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
@@ -200,7 +199,7 @@ body {
 }
 
 .wallpaperInfo {
-    height: 100%;
+  height: 100%;
   background-image: url("img/sound3.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -209,29 +208,120 @@ body {
 }
 
 .divMapa {
-  padding: 4% 0%;
+  padding: 4% 0% 2% 0%;
 }
 
 .titleMapa {
   font-size: 4.7vmin;
   font-weight: 600;
   font-family: 'Rubik', sans-serif;
+  margin: 1% 0%;
 }
 
 .mapaMain {
-  height: 50vmin;
+  height: 40vmin;
 }
 
 .footer {
-  background-color: rgba(0, 0, 0, 0.2);
+  clear: both;
+  margin-top: 20vmin;
+  padding-top: 2vmin;
+  /*  background-color: rgba(0, 0, 0, 1);*/
+  background: black; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, black, rgba(33, 150, 243, 1)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, black, rgba(33, 150, 243, 1)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, black, rgba(33, 150, 243, 1)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, black, rgba(33, 150, 243, 1)); /* Standard syntax */
   font-size: 1.5vmin;
+  bottom:0 !important;
 }
 
 .logoFooter {
-  height:18vmin;
-  padding: 6vmin 0vmin;
+  height:15vmin;
+  margin:0;
+  padding: 2vmin;
 }
 
 .minitext {
   padding-bottom:0.8vmin;
+}
+
+.InfoBario {
+  height: 200px;
+}
+
+.widthFull {
+  width: 90%;
+}
+
+.infoBario {
+  
+}
+
+.nameBario {
+  font-size: 3vmin;
+  font-weight: bold;
+  font-family: 'Rubik', sans-serif;
+}
+
+.statsBario {
+  font-size: 2.5vmin;
+  font-family: 'Rubik', sans-serif;
+}
+
+h1 {
+  font-size: 30px;
+  margin: auto;
+  margin-top: 50px;
+}
+.container {
+  max-width: 100%;
+  margin: auto;
+}
+/* Specific mapael css class are below
+* 'mapael' class is added by plugin
+*/
+.mapael .map {
+  position: relative;
+  padding-left: 34%;
+  margin-top: -10%;
+  padding-bottom: 20%;
+  z-index: 9999;
+}
+.mapael .mapTooltip {
+  position: absolute;
+  background-color: #474c4b;
+  moz-opacity: 0.70;
+  opacity: 0.70;
+  filter: alpha(opacity=70);
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 1000;
+  max-width: 200px;
+  display: none;
+  color: #fff;
+}
+.mapcontainer {
+  max-height: 40vmin;
+}
+
+.space {
+  margin-top: 20%;
+}
+
+.infoTable {
+}
+.buttonsDiv {
+}
+
+.clear {
+  clear: both;
+}
+
+.grupo {
+  font-size: 4vmin;
+  font-weight: 500;
+  font-family: 'Rubik', sans-serif;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  letter-spacing: 1px;
 }
